Semantico/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On INCLUDE shift to state 1
-- On programa shift to state 3
-- On nonempty_list(bibliotecas) shift to state 4
-- On bibliotecas shift to state 141

State 1:
bibliotecas -> INCLUDE . LIB [ VOID INTEIRO INCLUDE FLOAT CHAR ]
-- On LIB shift to state 2

State 2:
bibliotecas -> INCLUDE LIB . [ VOID INTEIRO INCLUDE FLOAT CHAR ]
-- On VOID reduce production bibliotecas -> INCLUDE LIB 
-- On INTEIRO reduce production bibliotecas -> INCLUDE LIB 
-- On INCLUDE reduce production bibliotecas -> INCLUDE LIB 
-- On FLOAT reduce production bibliotecas -> INCLUDE LIB 
-- On CHAR reduce production bibliotecas -> INCLUDE LIB 

State 3:
programa' -> programa . [ # ]
-- On # accept programa

State 4:
programa -> nonempty_list(bibliotecas) . nonempty_list(declaracoes) EOF [ # ]
-- On VOID shift to state 5
-- On INTEIRO shift to state 6
-- On FLOAT shift to state 7
-- On CHAR shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 10
-- On nonempty_list(declaracoes) shift to state 135
-- On funcao shift to state 137
-- On declaracoes shift to state 138
-- On dec_global shift to state 140

State 5:
tipo_simples -> VOID . [ ID ]
-- On ID reduce production tipo_simples -> VOID 

State 6:
tipo_simples -> INTEIRO . [ ID ]
-- On ID reduce production tipo_simples -> INTEIRO 

State 7:
tipo_simples -> FLOAT . [ ID ]
-- On ID reduce production tipo_simples -> FLOAT 

State 8:
tipo_simples -> CHAR . [ ID ]
-- On ID reduce production tipo_simples -> CHAR 

State 9:
tipo -> tipo_simples . [ ID ]
-- On ID reduce production tipo -> tipo_simples 

State 10:
dec_global -> tipo . separated_nonempty_list(VIRGULA,ID) PONTOEV [ VOID INTEIRO FLOAT EOF CHAR ]
funcao -> tipo . ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(declaracao) list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
-- On ID shift to state 11
-- On separated_nonempty_list(VIRGULA,ID) shift to state 133

State 11:
funcao -> tipo ID . APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(declaracao) list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
separated_nonempty_list(VIRGULA,ID) -> ID . [ PONTOEV ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ PONTOEV ]
-- On VIRGULA shift to state 12
-- On APAR shift to state 15
-- On PONTOEV reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 12:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA . separated_nonempty_list(VIRGULA,ID) [ PONTOEV ]
-- On ID shift to state 13
-- On separated_nonempty_list(VIRGULA,ID) shift to state 14

State 13:
separated_nonempty_list(VIRGULA,ID) -> ID . [ PONTOEV ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ PONTOEV ]
-- On VIRGULA shift to state 12
-- On PONTOEV reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 14:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) . [ PONTOEV ]
-- On PONTOEV reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 

State 15:
funcao -> tipo ID APAR . loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(declaracao) list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
-- On VOID shift to state 5
-- On INTEIRO shift to state 6
-- On FLOAT shift to state 7
-- On CHAR shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 16
-- On separated_nonempty_list(VIRGULA,parametro) shift to state 18
-- On parametro shift to state 19
-- On loption(separated_nonempty_list(VIRGULA,parametro)) shift to state 22
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,parametro)) -> 

State 16:
parametro -> tipo . ID [ VIRGULA FPAR ]
-- On ID shift to state 17

State 17:
parametro -> tipo ID . [ VIRGULA FPAR ]
-- On VIRGULA reduce production parametro -> tipo ID 
-- On FPAR reduce production parametro -> tipo ID 

State 18:
loption(separated_nonempty_list(VIRGULA,parametro)) -> separated_nonempty_list(VIRGULA,parametro) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,parametro)) -> separated_nonempty_list(VIRGULA,parametro) 

State 19:
separated_nonempty_list(VIRGULA,parametro) -> parametro . [ FPAR ]
separated_nonempty_list(VIRGULA,parametro) -> parametro . VIRGULA separated_nonempty_list(VIRGULA,parametro) [ FPAR ]
-- On VIRGULA shift to state 20
-- On FPAR reduce production separated_nonempty_list(VIRGULA,parametro) -> parametro 

State 20:
separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA . separated_nonempty_list(VIRGULA,parametro) [ FPAR ]
-- On VOID shift to state 5
-- On INTEIRO shift to state 6
-- On FLOAT shift to state 7
-- On CHAR shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 16
-- On separated_nonempty_list(VIRGULA,parametro) shift to state 21
-- On parametro shift to state 19

State 21:
separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA separated_nonempty_list(VIRGULA,parametro) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA separated_nonempty_list(VIRGULA,parametro) 

State 22:
funcao -> tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) . FPAR ACHAVE list(declaracao) list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
-- On FPAR shift to state 23

State 23:
funcao -> tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR . ACHAVE list(declaracao) list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
-- On ACHAVE shift to state 24

State 24:
funcao -> tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE . list(declaracao) list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
-- On VOID shift to state 5
-- On INTEIRO shift to state 6
-- On FLOAT shift to state 7
-- On CHAR shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 25
-- On list(declaracao) shift to state 28
-- On declaracao shift to state 131
-- On WHILE reduce production list(declaracao) -> 
-- On RETURN reduce production list(declaracao) -> 
-- On PUTS reduce production list(declaracao) -> 
-- On LITSTRING reduce production list(declaracao) -> 
-- On LITINT reduce production list(declaracao) -> 
-- On LITFLOAT reduce production list(declaracao) -> 
-- On LITCHAR reduce production list(declaracao) -> 
-- On IF reduce production list(declaracao) -> 
-- On ID reduce production list(declaracao) -> 
-- On GETS reduce production list(declaracao) -> 
-- On FOR reduce production list(declaracao) -> 
-- On FCHAVE reduce production list(declaracao) -> 
-- On APAR reduce production list(declaracao) -> 

State 25:
declaracao -> tipo . separated_nonempty_list(VIRGULA,ID) PONTOEV [ WHILE VOID RETURN PUTS LITSTRING LITINT LITFLOAT LITCHAR INTEIRO IF ID GETS FOR FLOAT FCHAVE CHAR APAR ]
-- On ID shift to state 13
-- On separated_nonempty_list(VIRGULA,ID) shift to state 26

State 26:
declaracao -> tipo separated_nonempty_list(VIRGULA,ID) . PONTOEV [ WHILE VOID RETURN PUTS LITSTRING LITINT LITFLOAT LITCHAR INTEIRO IF ID GETS FOR FLOAT FCHAVE CHAR APAR ]
-- On PONTOEV shift to state 27

State 27:
declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV . [ WHILE VOID RETURN PUTS LITSTRING LITINT LITFLOAT LITCHAR INTEIRO IF ID GETS FOR FLOAT FCHAVE CHAR APAR ]
-- On WHILE reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On VOID reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On RETURN reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On PUTS reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On LITSTRING reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On LITINT reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On LITFLOAT reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On LITCHAR reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On INTEIRO reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On IF reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On ID reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On GETS reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On FOR reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On FLOAT reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On FCHAVE reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On CHAR reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 
-- On APAR reduce production declaracao -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEV 

State 28:
funcao -> tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(declaracao) . list(comando) FCHAVE [ VOID INTEIRO FLOAT EOF CHAR ]
-- On WHILE shift to state 29
-- On RETURN shift to state 77
-- On PUTS shift to state 81
-- On LITSTRING shift to state 30
-- On LITINT shift to state 31
-- On LITFLOAT shift to state 32
-- On LITCHAR shift to state 33
-- On IF shift to state 84
-- On ID shift to state 34
-- On GETS shift to state 87
-- On FOR shift to state 90
-- On APAR shift to state 36
-- On variavel shift to state 37
-- On list(comando) shift to state 127
-- On expressao shift to state 92
-- On comando_se shift to state 105
-- On comando_saida shift to state 106
-- On comando_retorno shift to state 107
-- On comando_it shift to state 108
-- On comando_funcao shift to state 109
-- On comando_entrada shift to state 110
-- On comando_atribuicao shift to state 111
-- On comando shift to state 129
-- On chamada shift to state 114
-- On FCHAVE reduce production list(comando) -> 

State 29:
comando_it -> WHILE . expressao ACHAVE nonempty_list(comando) FCHAVE [ WHILE RETURN PUTS LITSTRING LITINT LITFLOAT LITCHAR IF ID GETS FOR FCHAVE APAR ]
-- On LITSTRING shift to state 30
-- On LITINT shift to state 31
-- On LITFLOAT shift to state 32
-- On LITCHAR shift to state 33
-- On ID shift to state 34
-- On APAR shift to state 36
-- On variavel shift to state 37
-- On expressao shift to state 75
-- On chamada shift to state 43

State 30:
expressao -> LITSTRING . [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On VIRGULA reduce production expressao -> LITSTRING 
-- On PONTOEV reduce production expressao -> LITSTRING 
-- On OU reduce production expressao -> LITSTRING 
-- On NOT reduce production expressao -> LITSTRING 
-- On MULTIPLICA reduce production expressao -> LITSTRING 
-- On MOD reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On E reduce production expressao -> LITSTRING 
-- On DIVIDE reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 
-- On ATRIB reduce production expressao -> LITSTRING 
-- On ACHAVE reduce production expressao -> LITSTRING 

State 31:
expressao -> LITINT . [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On VIRGULA reduce production expressao -> LITINT 
-- On PONTOEV reduce production expressao -> LITINT 
-- On OU reduce production expressao -> LITINT 
-- On NOT reduce production expressao -> LITINT 
-- On MULTIPLICA reduce production expressao -> LITINT 
-- On MOD reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On E reduce production expressao -> LITINT 
-- On DIVIDE reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 
-- On ATRIB reduce production expressao -> LITINT 
-- On ACHAVE reduce production expressao -> LITINT 

State 32:
expressao -> LITFLOAT . [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On VIRGULA reduce production expressao -> LITFLOAT 
-- On PONTOEV reduce production expressao -> LITFLOAT 
-- On OU reduce production expressao -> LITFLOAT 
-- On NOT reduce production expressao -> LITFLOAT 
-- On MULTIPLICA reduce production expressao -> LITFLOAT 
-- On MOD reduce production expressao -> LITFLOAT 
-- On MENOS reduce production expressao -> LITFLOAT 
-- On MENORIGUAL reduce production expressao -> LITFLOAT 
-- On MENOR reduce production expressao -> LITFLOAT 
-- On MAIS reduce production expressao -> LITFLOAT 
-- On MAIORIGUAL reduce production expressao -> LITFLOAT 
-- On MAIOR reduce production expressao -> LITFLOAT 
-- On IGUAL reduce production expressao -> LITFLOAT 
-- On FPAR reduce production expressao -> LITFLOAT 
-- On E reduce production expressao -> LITFLOAT 
-- On DIVIDE reduce production expressao -> LITFLOAT 
-- On DIFERENTE reduce production expressao -> LITFLOAT 
-- On ATRIB reduce production expressao -> LITFLOAT 
-- On ACHAVE reduce production expressao -> LITFLOAT 

State 33:
expressao -> LITCHAR . [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On VIRGULA reduce production expressao -> LITCHAR 
-- On PONTOEV reduce production expressao -> LITCHAR 
-- On OU reduce production expressao -> LITCHAR 
-- On NOT reduce production expressao -> LITCHAR 
-- On MULTIPLICA reduce production expressao -> LITCHAR 
-- On MOD reduce production expressao -> LITCHAR 
-- On MENOS reduce production expressao -> LITCHAR 
-- On MENORIGUAL reduce production expressao -> LITCHAR 
-- On MENOR reduce production expressao -> LITCHAR 
-- On MAIS reduce production expressao -> LITCHAR 
-- On MAIORIGUAL reduce production expressao -> LITCHAR 
-- On MAIOR reduce production expressao -> LITCHAR 
-- On IGUAL reduce production expressao -> LITCHAR 
-- On FPAR reduce production expressao -> LITCHAR 
-- On E reduce production expressao -> LITCHAR 
-- On DIVIDE reduce production expressao -> LITCHAR 
-- On DIFERENTE reduce production expressao -> LITCHAR 
-- On ATRIB reduce production expressao -> LITCHAR 
-- On ACHAVE reduce production expressao -> LITCHAR 

State 34:
chamada -> ID . APAR loption(separated_nonempty_list(VIRGULA,expressao)) FPAR [ WHILE VIRGULA RETURN PUTS PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR IGUAL IF ID GETS FPAR FOR FCHAVE E DIVIDE DIFERENTE ATRIB APAR ACHAVE ]
variavel -> ID . [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On APAR shift to state 35
-- On VIRGULA reduce production variavel -> ID 
-- On PONTOEV reduce production variavel -> ID 
-- On OU reduce production variavel -> ID 
-- On NOT reduce production variavel -> ID 
-- On MULTIPLICA reduce production variavel -> ID 
-- On MOD reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On E reduce production variavel -> ID 
-- On DIVIDE reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On ACHAVE reduce production variavel -> ID 

State 35:
chamada -> ID APAR . loption(separated_nonempty_list(VIRGULA,expressao)) FPAR [ WHILE VIRGULA RETURN PUTS PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT LITCHAR IGUAL IF ID GETS FPAR FOR FCHAVE E DIVIDE DIFERENTE ATRIB APAR ACHAVE ]
-- On LITSTRING shift to state 30
-- On LITINT shift to state 31
-- On LITFLOAT shift to state 32
-- On LITCHAR shift to state 33
-- On ID shift to state 34
-- On APAR shift to state 36
-- On variavel shift to state 37
-- On separated_nonempty_list(VIRGULA,expressao) shift to state 69
-- On loption(separated_nonempty_list(VIRGULA,expressao)) shift to state 70
-- On expressao shift to state 72
-- On chamada shift to state 43
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,expressao)) -> 

State 36:
expressao -> APAR . expressao FPAR [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On LITSTRING shift to state 30
-- On LITINT shift to state 31
-- On LITFLOAT shift to state 32
-- On LITCHAR shift to state 33
-- On ID shift to state 34
-- On APAR shift to state 36
-- On variavel shift to state 37
-- On expressao shift to state 38
-- On chamada shift to state 43

State 37:
expressao -> variavel . [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On VIRGULA reduce production expressao -> variavel 
-- On PONTOEV reduce production expressao -> variavel 
-- On OU reduce production expressao -> variavel 
-- On NOT reduce production expressao -> variavel 
-- On MULTIPLICA reduce production expressao -> variavel 
-- On MOD reduce production expressao -> variavel 
-- On MENOS reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On E reduce production expressao -> variavel 
-- On DIVIDE reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 
-- On ATRIB reduce production expressao -> variavel 
-- On ACHAVE reduce production expressao -> variavel 

State 38:
expressao -> expressao . MAIS expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOS expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MULTIPLICA expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIVIDE expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOR expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . IGUAL expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIOR expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . E expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . OU expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . NOT expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MOD expressao [ OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> APAR expressao . FPAR [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On OU shift to state 39
-- On NOT shift to state 41
-- On MULTIPLICA shift to state 44
-- On MOD shift to state 46
-- On MENOS shift to state 48
-- On MENORIGUAL shift to state 50
-- On MENOR shift to state 56
-- On MAIS shift to state 58
-- On MAIORIGUAL shift to state 54
-- On MAIOR shift to state 60
-- On IGUAL shift to state 62
-- On FPAR shift to state 68
-- On E shift to state 64
-- On DIVIDE shift to state 52
-- On DIFERENTE shift to state 66

State 39:
expressao -> expressao OU . expressao [ VIRGULA PONTOEV OU NOT MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ATRIB ACHAVE ]
-- On LITSTRING shift to state 30
-- On LITINT shift to state 31
-- On LITFLOAT shift to state 32
-- On LITCHAR shift to state 33
-- On ID shift to state 34
-- On APAR shift to state 36
-- On variavel shift to state 37
-- On expressao shift to state 40
-- On chamada shift to state 43
